# conan

./: README.md
boost/: conanfile.py
glyphy/: CMakeLists.txt  FindGlyphy.cmake  conanfile.py
profiles/: android_24_arm64-v8a  android_24_armeabi-v7a  android_24_x86
profiles/linux/: android_24_arm64-v8a  android_24_armeabi-v7a  android_24_x86  android_24_x86_64  default
profiles/macos/: android_24_arm64-v8a  android_24_armeabi-v7a  android_24_x86  android_24_x86_64
sources/triangle/: Android.mk  CMakeLists.txt  Makefile  showme.c  test.cpp  triangle.c  triangle.h  tricall.c  triexit.cpp
toolchains/: android_armeabi-v7a.cmake  android_x86.cmake
toolchains/linux/: android_arm64-v8a.cmake  android_armeabi-v7a.cmake  android_x86.cmake  android_x86_64.cmake
toolchains/macos/: android_arm64-v8a.cmake  android_armeabi-v7a.cmake  android_x86.cmake  android_x86_64.cmake
triangle/: conanfile.py
